[package]
name = "nacelle-stress-test"
version = "0.3.0-beta.2"
edition = "2024"
rust-version.workspace = true
description = "Stress client binary for measuring Nacelle TCP throughput and latency."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false
keywords = ["networking", "tokio", "benchmark"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["rustls"]
rustls = ["dep:rustls", "dep:tokio-rustls"]

[[bin]]
name = "nacelle-stress-test"
path = "src/main.rs"

[dependencies]
nacelle = { workspace = true, features = ["otel"] }
nacelle-stress-common = { workspace = true }
bytes = { workspace = true }
mimalloc = { workspace = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true, optional = true }
